# graphicsProject

./: .gitignore  CMakeLists.txt  run
src/: gameUtils.cpp  gameUtils.hpp  keyControllers.cpp  keyControllers.hpp  keyOperations.hpp  main.cpp  main.h  main.hpp  material.cpp  material.hpp  matrial.hpp  player.cpp  player.hpp  screenUtils.cpp  screenUtils.hpp  screens.cpp  screens.hpp
src/controllers/: keyOperations.cpp  keyOperations.h  screenUtils.cpp  screenUtils.h
src/view/: player.cpp  player.h  sky.cpp  sky.h  tree1.cpp
src/view/screens/: game.cpp  game.h  instructionScreen.cpp  instructionScreen.h  introScreen.cpp  introScreen.h  menuScreen.cpp  menuScreen.h
test/: main.cpp-off
tmp/: TextureBuilder.h  glaux.h
